--- a/SG5BE-Setup-Express-dan-RestAPI-Concepts/package.json
+++ b/SG5BE-Setup-Express-dan-RestAPI-Concepts/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only index.ts",
+    "dev:tugas": "ts-node-dev --respawn --transpile-only Tugas/index.ts",
     "build": "tsc"
   },
   "keywords": [],
